# mnemonic39

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/wordlists/: chinese_simplified.rs  chinese_traditional.rs  czech.rs  english.rs  french.rs  italian.rs  japanese.rs  korean.rs  portuguese.rs  spanish.rs
